compilation fix without imppl gen