@@ -15,8 +15,33 @@ dependencies {
     testImplementation 'com.fasterxml.jackson.core:jackson-databind:' + jacksonVersion
     testImplementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:' + jacksonVersion
     testImplementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:' + jacksonVersion
+    testImplementation 'org.assertj:assertj-core:3.23.1'
 
     testAnnotationProcessor 'com.flipkart.krystal:krystal-plugin:' + krystal_version
+}
+
+compileTestJava {
+    doFirst {
+        def moduleName = 'flipkart.krystal.vajramexecutor.krystex'
+        options.compilerArgs += [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'org.junit.jupiter.api',
+                '--add-reads', "$moduleName=org.junit.jupiter.api",
+                '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+                '--add-modules', 'com.fasterxml.jackson.databind',
+                '--add-reads', "$moduleName=com.fasterxml.jackson.databind",
+                '--add-modules', 'com.fasterxml.jackson.annotation',
+                '--add-reads', "$moduleName=com.fasterxml.jackson.annotation",
+                '--add-modules', 'org.assertj.core',
+                '--add-reads', "$moduleName=org.assertj.core",
+                '--add-modules', 'com.fasterxml.jackson.datatype.jdk8',
+                '--add-reads', "$moduleName=com.fasterxml.jackson.datatype.jdk8",
+                '--add-modules', 'com.fasterxml.jackson.datatype.jsr310',
+                '--add-reads', "$moduleName=com.fasterxml.jackson.datatype.jsr310",
+                '--add-modules', 'org.junit.jupiter.params',
+                '--add-reads', "$moduleName=org.junit.jupiter.params",
+        ]
+    }
 }
 
 project.tasks.compileTestJava.dependsOn 'testCodeGenVajramImpl'
